// Hotel Management System - Database Schema
// Copy this code to https://dbdiagram.io to visualize

// =============================================
// LOOKUP TABLES
// =============================================

Table DEPARTMENTS {
  department_id int [pk, increment]
  department_name nvarchar(100) [not null, unique]
  description nvarchar(500)
  created_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

Table SERVICE_CATEGORIES {
  category_id int [pk, increment]
  category_name nvarchar(100) [not null, unique]
  description nvarchar(500)
  created_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

Table ROOM_TYPES {
  type_id int [pk, increment]
  type_name nvarchar(50) [not null, unique]
  description nvarchar(500)
  base_price decimal(10,2) [not null]
  capacity int [not null]
  amenities nvarchar(1000)
  created_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

// =============================================
// CORE TABLES
// =============================================

Table CUSTOMERS {
  customer_id int [pk, increment]
  first_name nvarchar(50) [not null]
  last_name nvarchar(50) [not null]
  email nvarchar(100) [not null, unique]
  password_hash nvarchar(256) [note: 'Login credential']
  phone nvarchar(20)
  address nvarchar(500)
  id_number nvarchar(50)
  id_type nvarchar(50) [note: 'Passport, ID Card, Driver License']
  date_of_birth date
  nationality nvarchar(50)
  loyalty_points int [default: 0]
  membership_tier nvarchar(20) [default: 'Bronze', note: 'Bronze, Silver, Gold, Platinum']
  total_spending decimal(15,2) [default: 0]
  created_at datetime [default: `GETDATE()`]
  updated_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

Table EMPLOYEES {
  employee_id int [pk, increment]
  department_id int [not null, ref: > DEPARTMENTS.department_id]
  role_id int [ref: > ROLES.role_id, note: 'For access control']
  first_name nvarchar(50) [not null]
  last_name nvarchar(50) [not null]
  email nvarchar(100) [not null, unique]
  password_hash nvarchar(256) [note: 'Login credential']
  phone nvarchar(20)
  address nvarchar(500)
  position nvarchar(100) [not null]
  salary decimal(10,2)
  hire_date date [not null, default: `GETDATE()`]
  birth_date date
  is_available bit [default: 1]
  created_at datetime [default: `GETDATE()`]
  updated_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

Table ROOMS {
  room_id int [pk, increment]
  room_number nvarchar(10) [not null, unique]
  type_id int [not null, ref: > ROOM_TYPES.type_id]
  floor int [not null]
  status nvarchar(20) [default: 'Available', note: 'Available, Occupied, Maintenance, Cleaning, Reserved']
  notes nvarchar(500)
  created_at datetime [default: `GETDATE()`]
  updated_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

Table SERVICES {
  service_id int [pk, increment]
  category_id int [not null, ref: > SERVICE_CATEGORIES.category_id]
  service_name nvarchar(100) [not null]
  description nvarchar(500)
  price decimal(10,2) [not null]
  duration_minutes int
  created_at datetime [default: `GETDATE()`]
  updated_at datetime [default: `GETDATE()`]
  is_active bit [default: 1]
}

// =============================================
// TRANSACTIONAL TABLES
// =============================================

Table RESERVATIONS {
  reservation_id int [pk, increment]
  customer_id int [not null, ref: > CUSTOMERS.customer_id]
  room_id int [not null, ref: > ROOMS.room_id]
  check_in_date date [not null]
  check_out_date date [not null]
  actual_check_in datetime
  actual_check_out datetime
  num_guests int [default: 1]
  status nvarchar(20) [default: 'Pending', note: 'Pending, Confirmed, CheckedIn, CheckedOut, Cancelled, NoShow']
  room_charge decimal(10,2) [default: 0]
  service_charge decimal(10,2) [default: 0]
  tax_amount decimal(10,2) [default: 0]
  discount_amount decimal(10,2) [default: 0]
  total_amount decimal(10,2) [default: 0]
  paid_amount decimal(10,2) [default: 0]
  special_requests nvarchar(1000)
  cancellation_reason nvarchar(500)
  cancelled_at datetime
  created_at datetime [default: `GETDATE()`]
  updated_at datetime [default: `GETDATE()`]
  created_by int
}

Table PAYMENTS {
  payment_id int [pk, increment]
  reservation_id int [not null, ref: > RESERVATIONS.reservation_id]
  customer_id int [not null, ref: > CUSTOMERS.customer_id]
  amount decimal(10,2) [not null]
  payment_method nvarchar(50) [not null, note: 'Cash, Credit Card, Debit Card, Bank Transfer, Mobile Payment']
  payment_date datetime [default: `GETDATE()`]
  status nvarchar(20) [default: 'Completed', note: 'Pending, Completed, Failed, Refunded, Partial']
  transaction_ref nvarchar(100)
  notes nvarchar(500)
  processed_by int
  created_at datetime [default: `GETDATE()`]
}

Table SERVICES_USED {
  usage_id int [pk, increment]
  reservation_id int [not null, ref: > RESERVATIONS.reservation_id]
  service_id int [not null, ref: > SERVICES.service_id]
  quantity int [default: 1]
  unit_price decimal(10,2) [not null]
  total_price decimal(10,2) [not null]
  used_date datetime [default: `GETDATE()`]
  notes nvarchar(500)
  served_by int
  status nvarchar(20) [default: 'Completed', note: 'Pending, InProgress, Completed, Cancelled']
  created_at datetime [default: `GETDATE()`]
}

// =============================================
// OPERATIONAL TABLES
// =============================================

Table MAINTENANCE_REQUESTS {
  request_id int [pk, increment]
  room_id int [not null, ref: > ROOMS.room_id]
  assigned_to int [ref: > EMPLOYEES.employee_id]
  title nvarchar(200) [not null]
  description nvarchar(1000)
  priority nvarchar(20) [default: 'Medium', note: 'Low, Medium, High, Critical']
  status nvarchar(20) [default: 'Open', note: 'Open, InProgress, Completed, Cancelled']
  estimated_cost decimal(10,2)
  actual_cost decimal(10,2)
  created_at datetime [default: `GETDATE()`]
  started_at datetime
  completed_at datetime
  created_by int
}

Table EMPLOYEE_SHIFTS {
  shift_id int [pk, increment]
  employee_id int [not null, ref: > EMPLOYEES.employee_id]
  shift_date date [not null]
  start_time time [not null]
  end_time time [not null]
  actual_start time
  actual_end time
  status nvarchar(20) [default: 'Scheduled', note: 'Scheduled, InProgress, Completed, Absent, Cancelled']
  notes nvarchar(500)
  created_at datetime [default: `GETDATE()`]
}

// =============================================
// AUTHENTICATION: ROLES TABLE
// Credentials stored in CUSTOMERS/EMPLOYEES
// Only EMPLOYEES have role_id for access control
// =============================================

Table ROLES {
  role_id int [pk, increment]
  role_name nvarchar(50) [not null, unique]
  description nvarchar(500)
  role_level int [not null, default: 1, note: 'Higher level = more access']
  is_active bit [default: 1]
  created_at datetime [default: `GETDATE()`]
}

// =============================================
// AUDIT & HISTORY TABLES
// =============================================

Table ROOM_STATUS_HISTORY {
  history_id int [pk, increment]
  room_id int [not null, ref: > ROOMS.room_id]
  old_status nvarchar(20)
  new_status nvarchar(20) [not null]
  changed_at datetime [default: `GETDATE()`]
  changed_by int
  reason nvarchar(500)
}

Table AUDIT_LOGS {
  log_id int [pk, increment]
  table_name nvarchar(100) [not null]
  operation nvarchar(20) [not null, note: 'INSERT, UPDATE, DELETE']
  record_id int
  old_values nvarchar(max)
  new_values nvarchar(max)
  changed_by nvarchar(100)
  changed_at datetime [default: `GETDATE()`]
  ip_address nvarchar(50)
  application nvarchar(100)
}

// =============================================
// TABLE GROUPS (for visual organization)
// =============================================

TableGroup Lookup {
  DEPARTMENTS
  SERVICE_CATEGORIES
  ROOM_TYPES
}

TableGroup Core {
  CUSTOMERS
  EMPLOYEES
  ROOMS
  SERVICES
}

TableGroup Transactions {
  RESERVATIONS
  PAYMENTS
  SERVICES_USED
}

TableGroup Operations {
  MAINTENANCE_REQUESTS
  EMPLOYEE_SHIFTS
}

TableGroup Audit {
  ROOM_STATUS_HISTORY
  AUDIT_LOGS
}

TableGroup Authentication {
  ROLES
}
